--- a/SetupColorScreen/Storybords/Base.lproj/Main.storyboard
+++ b/SetupColorScreen/Storybords/Base.lproj/Main.storyboard
@@ -43,10 +43,10 @@
                                 <rect key="frame" x="16" y="20" width="288" height="113"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="87C-e5-Ikx">
-                                <rect key="frame" x="16" y="173" width="288" height="130"/>
+                                <rect key="frame" x="16" y="163" width="288" height="132"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="wiX-BO-3dF">
-                                        <rect key="frame" x="0.0" y="4" width="50" height="121.5"/>
+                                        <rect key="frame" x="0.0" y="5" width="50" height="121.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DNI-l7-3kr">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="20.5"/>
@@ -72,7 +72,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="AXU-D4-8SI">
-                                        <rect key="frame" x="60" y="4" width="40" height="121.5"/>
+                                        <rect key="frame" x="60" y="5" width="40" height="121.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9k0-6g-uQs">
                                                 <rect key="frame" x="0.0" y="0.0" width="34.5" height="20.5"/>
@@ -98,27 +98,50 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="6LZ-2L-71K">
-                                        <rect key="frame" x="110" y="0.0" width="178" height="130"/>
+                                        <rect key="frame" x="110" y="1" width="128" height="130"/>
                                         <subviews>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="FwX-pQ-CCj">
-                                                <rect key="frame" x="-2" y="0.0" width="182" height="31"/>
+                                                <rect key="frame" x="-2" y="0.0" width="132" height="31"/>
                                                 <connections>
                                                     <action selector="slidersActions:" destination="BYZ-38-t0r" eventType="valueChanged" id="MH5-zA-QW4"/>
                                                 </connections>
                                             </slider>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="orw-S5-9IF">
-                                                <rect key="frame" x="-2" y="50" width="182" height="31"/>
+                                                <rect key="frame" x="-2" y="50" width="132" height="31"/>
                                                 <connections>
                                                     <action selector="slidersActions:" destination="BYZ-38-t0r" eventType="valueChanged" id="SVT-Ac-mIB"/>
                                                 </connections>
                                             </slider>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="7k7-bl-eym">
-                                                <rect key="frame" x="-2" y="100" width="182" height="31"/>
+                                                <rect key="frame" x="-2" y="100" width="132" height="31"/>
                                                 <connections>
                                                     <action selector="slidersActions:" destination="BYZ-38-t0r" eventType="valueChanged" id="g2d-bq-7Jc"/>
                                                 </connections>
                                             </slider>
                                         </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="aPv-v1-cav">
+                                        <rect key="frame" x="248" y="0.0" width="40" height="132"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AwW-fd-JZT">
+                                                <rect key="frame" x="0.0" y="0.0" width="40" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yqe-gI-uVU">
+                                                <rect key="frame" x="0.0" y="49" width="40" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VZB-O7-H4a">
+                                                <rect key="frame" x="0.0" y="98" width="40" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                            </textField>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="NUp-Rp-qAU"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                             </stackView>
@@ -137,7 +160,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YF6-jl-pGU" secondAttribute="trailing" constant="16" id="3tv-Gz-xth"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JdX-KX-8cl" secondAttribute="bottom" constant="60" id="6pv-ZJ-yY4"/>
                             <constraint firstItem="YF6-jl-pGU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="7Dc-Do-8vb"/>
-                            <constraint firstItem="87C-e5-Ikx" firstAttribute="top" secondItem="YF6-jl-pGU" secondAttribute="bottom" constant="40" id="Ney-l5-H0e"/>
+                            <constraint firstItem="87C-e5-Ikx" firstAttribute="top" secondItem="YF6-jl-pGU" secondAttribute="bottom" constant="30" id="Ney-l5-H0e"/>
                             <constraint firstItem="YF6-jl-pGU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="WAN-RJ-yeu"/>
                             <constraint firstItem="87C-e5-Ikx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="cRx-mZ-B4h"/>
                             <constraint firstItem="JdX-KX-8cl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cdC-Vt-s3Y"/>
@@ -147,10 +170,13 @@
                     </view>
                     <connections>
                         <outlet property="blueSlider" destination="7k7-bl-eym" id="ubu-UI-TMF"/>
+                        <outlet property="blueTF" destination="VZB-O7-H4a" id="c6m-pJ-NOc"/>
                         <outlet property="blueValueLabel" destination="lo3-KT-EfB" id="XqA-Jn-G8h"/>
                         <outlet property="greenSlider" destination="orw-S5-9IF" id="tww-mu-djF"/>
+                        <outlet property="greenTF" destination="Yqe-gI-uVU" id="M39-zF-JoY"/>
                         <outlet property="greenValueLabel" destination="dgt-F2-edo" id="kRa-r9-ces"/>
                         <outlet property="redSlider" destination="FwX-pQ-CCj" id="j0D-gF-W6K"/>
+                        <outlet property="redTF" destination="AwW-fd-JZT" id="XDN-ge-Gpr"/>
                         <outlet property="redValueLabel" destination="9k0-6g-uQs" id="vmJ-bN-D6q"/>
                         <outlet property="resultView" destination="YF6-jl-pGU" id="onx-tN-U8t"/>
                     </connections>
